<resources>
    <string name="app_name">Finance3.0</string>
    <string name="currencies">Currencies</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="editing">Editing</string>
    <string name="wallets">Wallets</string>
    <string name="incomes">Incomes</string>
    <string name="costs">Costs</string>
    <string name="transfers">Transfers</string>
    <string name="reports">Reports</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="newWallet">new wallet</string>
    <string name="amount">Amount</string>
    <string name="currency">currency</string>
    <string name="incomeCategories">income categories</string>
    <string name="newCategory">New Category</string>
    <string name="parent">Parent</string>
    <string name="edit">Edit</string>
    <string name="add_button_text">+</string>
    <string name="costCategories">Cost Categories</string>
    <string name="newIncome">new income</string>
    <string name="wallet">wallet</string>
    <string name="date">date</string>
    <string name="subCategory">sub Category</string>
    <string name="category">Category</string>
    <string name="photo">photo</string>
    <string name="newCost">new cost</string>
    <string name="addPhoto">add photo</string>
    <string name="showPhoto">show photo</string>
    <string name="noPhoto">sorry it is no photo for this cost</string>
    <string name="addError">sorry, can\'t add photo check internet and free space</string>
    <string name="newTransfer">new transfer</string>
    <string name="fromWallet">From wallet</string>
    <string name="toWallet">To Wallet</string>
    <string name="official_rate">Official rate</string>
    <string name="checkInternet">Check internet</string>
    <string name="dateFormat">dd-MM-yyyy</string>
    <string name="unpossibleToDeleteCur">Unpossible to delete usable curency</string>
    <string name="unpossibleToDeleteWallet">Unpossible to delete usable wallet</string>
    <string name="hasChilds">First delete all childs!</string>
    <string name="categoryUsable">This category are used!</string>
    <string name="report3">report3</string>
    <string name="costsByCategories" translatable="false">Costs by Categories</string>
    <string name="incomesByCategories">Incomes by categories</string>
    <string name="type">type</string>
    <string name="balanceCHart">Balance chart</string>
    <string name="theme">Set dark style</string>
    <string name="allCurrencies">All currencies</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>



    <!-- Sign-in status messages -->
    <string name="title_text">Google Sign-In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="login">Login with google</string>


    <string name="server_client_id">898023153636-ahufd4bo18ssqe1o6jfs5gonmralqggh.apps.googleusercontent.com</string>
    <string name="token">Token</string>
    <string name="serveAuthCode">Server Ayth Code</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="setPin">Set pin code</string>
    <string name="confirmPassword">Confirm PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="share">Share</string>
    <string name="notification">Notification</string>
    <string name="alarm_label">Finances</string>
    <string name="notification_content">Dont forget about finances</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_accaunt">User Account</string>
    <string name="rate">Rate</string>
    <string name="Communicate">Communicate</string>
    <string name="google_auth">google auth</string>
    <string name="cloud_backup">Cloud Backup</string>
    <string name="cloud_restore">Cloud Restore</string>
    <string name="autoBackup">Auto Backup</string>

</resources>
