<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlNormal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/background_margin"
        android:background="@drawable/shape"
        android:orientation="vertical">
        <Switch
            android:layout_margin="@dimen/background_margin"
            android:text="@string/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/themeSwitch" />

        <Switch
            android:layout_margin="@dimen/background_margin"
            android:text="@string/setPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pinSwitch" />

        <Button
            android:id="@+id/button_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup"/>

        <Button
            android:id="@+id/button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"/>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <Button
            android:id="@+id/button_token_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token"/>

        <Button
            android:id="@+id/button_server_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serveAuthCode"/>
    </LinearLayout>


</LinearLayout>