<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TODO Use custom view? -->
        <!-- TODO create separate style/attr for view -->
        <TextView
            android:id="@+id/tvPurse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_wallets_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/purses"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvIncomes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_incomes_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/incomes"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvCosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_costs_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/costs"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvTransfers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_transfers_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/transfers"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_reports_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/reports"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_categories_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/categories"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_currencies_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/currencies"
            android:textSize="@dimen/main_activity_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separatorView" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_settings_32dp"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:text="@string/settings"
            android:textSize="@dimen/main_activity_text_size" />

    </LinearLayout>
</ScrollView>

