<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPurse"
            android:text="@string/purses"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_purses"
            android:textSize="40sp"
            android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvIncomes"
            android:text="@string/incomes"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_income"
            android:textSize="40sp"
            android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCosts"
            android:text="@string/costs"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_costs"
            android:textSize="40sp"
            android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTransfers"
        android:text="@string/transfers"
        android:duplicateParentState="true"
        android:drawableLeft="@mipmap/ic_transfers"
        android:textSize="40sp"
        android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvReports"
            android:text="@string/reports"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_reports"
            android:textSize="40sp"
            android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCategories"
            android:text="@string/categories"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_categories"
            android:textSize="40sp"
            android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvCurrency"
            android:text="@string/currencies"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_currencies"
            android:textSize="40sp"
            android:onClick="selectCategory"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSettings"
            android:text="@string/settings"
            android:duplicateParentState="true"
            android:drawableLeft="@mipmap/ic_settings"
            android:textSize="40sp"
            android:onClick="selectCategory"/>




    </LinearLayout>
</LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/tvPurse"-->
        <!--android:text="@string/purse"-->
        <!--android:textSize="40sp"-->
        <!--android:textIsSelectable="false"-->
        <!--android:onClick="changeCategory"/>-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"/>-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/tvCategory"-->
        <!--android:text="@string/category"-->
        <!--android:textSize="40sp"-->
        <!--android:textIsSelectable="false"-->
        <!--android:onClick="changeCategory"/>-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"/>-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/tvTransfers"-->
        <!--android:text="@string/transfers"-->
        <!--android:textSize="40sp"-->
        <!--android:textIsSelectable="false"-->
        <!--android:onClick="changeCategory"/>-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/tvIncomes"-->
        <!--android:text="@string/incomes"-->
        <!--android:textSize="40sp"-->
        <!--android:textIsSelectable="false"-->
        <!--android:onClick="changeCategory"/>-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:color/darker_gray"/>-->

    <!--<ImageView-->
        <!--android:paddingTop="10dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/startImageView"/>-->

