<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customNs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/background_margin"
        android:layout_marginRight="@dimen/background_margin"
        android:layout_marginBottom="@dimen/background_margin"
        android:orientation="vertical">


        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_list_margin_bottom"
            android:layout_marginTop="@dimen/main_list_margin_bottom"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_wallets_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/wallets"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />

        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvIncomes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_list_margin_bottom"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_incomes_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/incomes"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />

        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvCosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_list_margin_bottom"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_costs_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/costs"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />


        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvTransfers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_list_margin_bottom"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_transfers_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/transfers"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />


        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_list_margin_bottom"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_reports_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/reports"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />

        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_list_margin_bottom"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_categories_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/categories"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />

        <com.github.andrei1993ak.finances.app.customViews.BottomBorderTextView
            android:id="@+id/tvCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorBackgroundFloating"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_currencies_32dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:duplicateParentState="true"
            android:onClick="onSelectedCategoryViewClick"
            android:paddingBottom="@dimen/main_list_padding_bootom"
            android:paddingLeft="@dimen/main_list_paddint_lef"
            android:paddingTop="@dimen/main_list_padding_top"
            android:text="@string/currencies"
            android:textSize="@dimen/main_activity_text_size"
            customNs:mBorderColor="@color/colorSeparator" />

    </LinearLayout>
</ScrollView>

